9-change-patient-url-for-signin-and-signup
  - Change  patient url.
  - Added PATIENT role to patient.
  - Chnaged admin url