@@ -7,6 +7,7 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 public class UserDetailsImpl implements UserDetails {
@@ -36,7 +37,7 @@ public class UserDetailsImpl implements UserDetails {
   }
 
   public static UserDetailsImpl build(Patient patient) {
-    List<GrantedAuthority> authorities = Collections.emptyList();
+    List<GrantedAuthority> authorities = List.of(new SimpleGrantedAuthority("ROLE_" + patient.getRole()));
 
     return new UserDetailsImpl(
         patient.getId(),
